# MacroNest

./: .gitignore  Cargo.toml  HUD_NOTES.md  LICENSE  README.md  apply_color_pick_bugfix.py  apply_foreground_bypass_bugfix.py  build.rs  cargo_errors.txt  cargo_errors_utf8.txt  check_err.txt  check_errors.txt  compile_error.txt  compile_errors.txt  diff_settings.txt  errors.txt  keys.txt  repomix-output.txt  repomix-output.xml  t --count HEAD
.cargo/: config.toml
arduino/rawhid_runtime/: RawHID.cpp  RawHID.h  rawhid_runtime.ino
assets/: firmware-rawhid.hex
assets/lang/: vi.json
certs/: MacroNest-TestCodeSigning.pfx
output/: gold_usdvnd_monthly.csv  gold_usdvnd_monthly.xlsx  gold_usdvnd_monthly_avg.csv  gold_usdvnd_monthly_last.csv
scratch/: check_dirs.rs  final_fix.rs  repair_ui.rs  test_clipboard.rs
src/: ai.rs  app_icon.rs  audio.rs  audiosense.rs  hotkey.rs  lang.rs  macro_code.rs  main.rs  media.rs  model.rs  ocr.rs  overlay.rs  platform.rs  profile_code.rs  render.rs  storage.rs  ui.rs  ui.rs.mojibake.bak  window_list.rs
src/overlay/: window_preset.rs
src/ui/: audiosense_panel.rs  command_panel.rs  crosshair_panel.rs  geometry_panel.rs  hud_panel.rs  macro_panel.rs  macro_panel.rs.bak  macro_panel_ocr.rs  mod.rs  mouse_panel.rs  ocr_panel.rs  settings_panel.rs  sound_panel.rs  vision_panel.rs  window_panel.rs
target-release-tmp/: .rustc_info.json
target-release-tmp/release/: crosshair.d
target-release-tmp/release/.fingerprint/ab_glyph-2a6a762e8ef04c8f/: lib-ab_glyph  lib-ab_glyph.json
(+741 files in other folders)
