[package]
name = "crosshair"
version = "0.1.12"
edition = "2024"

[dependencies]
anyhow = "1.0"
arboard = "3.6"
base64 = "0.22"
crossbeam-channel = "0.5"
directories = "6.0"
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow"] }
flate2 = { version = "1.1", default-features = false, features = ["rust_backend"] }
image = { version = "0.25", default-features = false, features = ["bmp", "ico", "jpeg", "png", "webp"] }
once_cell = "1.21"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
resvg = "0.45"
rfd = "0.15"
rodio = { version = "0.21", default-features = true }
raw-window-handle = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-skia = "0.11"

[target.'cfg(windows)'.dependencies]
libloading = "0.8"
opencv = { version = "0.98.2", default-features = false, features = ["clang-runtime", "imgproc"] }
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Storage_Xps",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Magnification",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
